grant native access to package